--- a/2019-2020/sem2/soraya-camina/css/main.css
+++ b/2019-2020/sem2/soraya-camina/css/main.css
@@ -19,5 +19,5 @@ body {
 canvas {
 	height: 95vmin !important;
 	width: auto !important;
-	box-shadow: 0 3px 5px -2px rgba(0,0,0,0.5);
+	/*box-shadow: 0 3px 5px -2px rgba(0,0,0,0.5);*/
 }
